--- a/app/src/main/res/layout/fragment_welcome_page.xml
+++ b/app/src/main/res/layout/fragment_welcome_page.xml
@@ -1,67 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".view.WelcomePageFragment">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical">
-
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="208dp"
             app:srcCompat="@drawable/intersect" />
 
-        <!--   todo     refactoring layout files-->
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textView"
-            android:layout_width="111dp"
-            android:layout_height="29dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:text="Welcome!"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            style="@style/WelcomeTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_string" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/registrationButton"
+            style="@style/WelcomeRegisterButtonStyle"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/bordered_button"
-            android:gravity="center"
-            android:text="Create an account"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:layout_height="wrap_content"
+            android:text="@string/create_an_account_string" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginButton"
+            style="@style/WelcomeLoginButtonStyle"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/bordered_button_white"
-            android:gravity="center"
-            android:text="I already have an account"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:layout_height="wrap_content"
+            android:text="@string/i_already_have_an_account_string" />
     </LinearLayout>
 </ScrollView>
