--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,29 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/searchTextInputLayout"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Search"
-        app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/search_border_color"
-        app:boxStrokeWidth="2dp"
-        android:layout_marginTop="32dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/searchEditText"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:drawableStart="@drawable/search"
-            android:drawableEnd="@drawable/dictation"
-            android:drawablePadding="8dp"
-            android:padding="8dp"
-            android:background="@drawable/bordered_edit_text"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:queryHint="Search"
+        android:background="@drawable/bordered_edit_text"
+        app:iconifiedByDefault="false"
+        app:searchIcon="@drawable/search" />
 
     <LinearLayout
         android:layout_width="match_parent"
